<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">安华物流资产管理手持端</string>
    <string name="out_order">出库</string>
    <string name="in_order">入库</string>
    <string name="check_info">盘点</string>
    <string name="zb_manager">栈板管理</string>
    <string name="settings">设置</string>
    <string name="select_order">订单选择:</string>
    <string name="layer">层数</string>
    <string name="epc">EPC</string> 
    <string name="start_scan">开始扫描</string>
    <string name="mul_upload">批量上传</string>
    <string name="sel_upload">选择上传</string>

</resources>
