<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<include layout="@layout/label_title"/>
<!-- 订单选择 -->
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    style="@style/NormalFontStyle"
		    android:layout_margin="5dp"
		    android:text="@string/select_order" />

		<Spinner
		    android:id="@+id/spinner_out_order_select_order"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" 
		    android:layout_marginLeft="20dp"
		    android:layout_marginRight="20dp"
		    />
	    
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    
	    android:orientation="vertical" >

<!-- 盘存时的展板信息框 -->  
<ListView 
    android:id="@+id/listView_out_order_zb_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
</ListView>  

	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginBottom="10dp" >

		<Button
		    android:id="@+id/button_out_order_start_scan"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    style="@style/NormalFontStyle"
		    android:layout_weight="1"
		    android:background="@drawable/main_btn_bg"
		    android:layout_margin="3dp"
		    android:text="@string/start_scan" />

		<Button
		    android:id="@+id/button_out_order_sel_upload"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    style="@style/NormalFontStyle"
		    android:layout_weight="1"
		    android:background="@drawable/main_btn_bg"
		    android:layout_margin="3dp"
		    android:text="@string/sel_upload" />

		<Button
		    android:id="@+id/button_out_order_mul_upload"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    style="@style/NormalFontStyle"
		    android:layout_weight="1"
		    android:background="@drawable/main_btn_bg"
		    android:layout_margin="3dp"
		    android:text="@string/mul_upload" />

	</LinearLayout>

</LinearLayout>
